# lazy_ta

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/: compiler.py  config.py  file_scanner.py  grader.py  llm_evaluator.py  llm_writer.py  models.py  progress.py  report.py  test_runner.py
src/prompts/: rewrite.py
src/prompts/problem/: __init__.py  base.py  p1.py  p2.py  p3.py  p4.py
src/utils/: code.py  file.py  key_manager.py  llm.py  log.py
test_cases/: README.md
test_cases/P1/1/: in.txt  out.txt
test_cases/P1/example_1/: in.txt
test_cases/P1_ex/1/: in.txt  out.txt
test_cases/P1_ex/example_1/: in.txt  out.txt
test_cases/P2/1/: in.txt  out.txt
test_cases/P2/2/: out.txt
test_cases/P2/example_1/: in.txt  out.txt
test_cases/P2_ex/1/: in.txt  out.txt
test_cases/P2_ex/example_1/: in.txt
test_cases/P3_a/1/: in.txt  out.txt
test_cases/P3_a/2/: in.txt  out.txt
test_cases/P3_a/3/: in.txt  out.txt
test_cases/P3_a/4/: out.txt
test_cases/P3_b/4/: in.txt
test_cases/P3_b/example_1/: in.txt  out.txt
test_cases/P3_ex/1/: out.txt
test_cases/P3_ex/example_1/: out.txt
test_cases/P4/2/: in.txt  out.txt
test_cases/P4/3/: in.txt  out.txt
test_cases/P4/example_1/: in.txt  out.txt
test_cases/P4/example_2/: in.txt  out.txt
test_cases/P4_ex/1/: in.txt  out.txt
test_cases/P4_ex/2/: in.txt  out.txt
test_cases/P4_ex/example_1/: in.txt  out.txt
tests/: test_models.py  test_report.py
